# lovable-mcp-browser-use-gateway

./: .dockerignore  .env.example  .gitignore  ACTION_PLAN_N8N_FIX.md  AUTHENTICATION_FIX_DEPLOYMENT.md  AUTHENTICATION_FIX_SUMMARY.md  AUTHENTICATION_INVESTIGATION.md  AUTHENTICATION_INVESTIGATION_COMPLETE.md  AUTHENTICATION_INVESTIGATION_FINAL_REPORT.md  AUTHENTICATION_ROOT_CAUSE_ANALYSIS.md  AUTH_DEPLOYMENT.md  AUTH_GENERATION_QUICK_START.md  CHANGELOG.md  COMPLETION_REPORT.md  CONFIGURATION_GUIDE.md  CONFIGURATION_RECOMMENDATIONS.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_ISSUE_SUMMARY.md  DEPLOYMENT_READY_CHECKLIST.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOYMENT_STEPS.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VERIFICATION_COMPLETE.md  DEPLOY_NOW.md  DIAGNOSTIC_REPORT.md  Dockerfile  ENVIRONMENT_VARIABLES_INVESTIGATION.md  FILES_MANIFEST.md  FINAL_STATUS_REPORT.md  FLY_SECRETS_SETUP_GUIDE.md  IMPLEMENTATION_SUMMARY.md  N8N_ERROR_INVESTIGATION.md  N8N_FIX_COMPLETE_SUMMARY.md  PRIORITY_COMPLETION_REPORT.md  PRODUCTION_DEPLOYMENT_SUMMARY.md  PRODUCTION_READINESS_REPORT.md  PYLANCE_FIXES_COMPLETE.md  PYLANCE_FIXES_SUMMARY.md  QUICKSTART.md  (+52 more)
.github/workflows/: ci.yml  deploy.yml
scripts/: inspect_lock.py  save_auth_state.py  save_auth_state_v2.py
src/: __init__.py  agent_runner.py  server.py
src/lovable_adapter/: __init__.py  flows.py  selectors.py
tests/: __init__.py  conftest.py  test_agent_runner.py  test_e2e_lovable_smoke.py  test_lovable_adapter.py  test_lovable_flow.py  test_mcp_http_surface.py  test_server_error_handling.py
